# evHID

./: README.md  holygrail_almos.cast  pyproject.toml
src/evHID/: Term.py  Typedefs.py  __init__.py  ex2.py  example.py  example2.py  focus  test_keyu.py  tester.py
src/evHID/Types/: __init__.py  data.py
src/evHID/Types/Support/: terminal.py
src/evHID/Types/controls/: callback.py
src/evHID/Types/dev/: keyboard.py
src/evHID/Types/hid/: __init__.py  kbev.py
src/evHID/Types/term/: __init__.py  color.py  cursors.py  posix.py  size.py  terminal.py  winnt.py
src/evHID/Types/tty/: __init__.py  keyboard.py  posix.py
src/evHID/dev/: keyboard.py
src/evHID/hid/: kbev.py
src/evHID/term/: posix.py
tests/: test_Term.py  test_ttyposix.py
